# automated-crm

./: .gitignore  CLAUDE.md  README.md  daily_run.py  dashboard.py  openai.py  pyproject.toml
.claude/rules/: database-safety.md  git-safety.md  no-delete.md
.streamlit/: config.toml
crm_engine/: __init__.py  ai_message_generator.py  cli.py  daily_run.py  db.py  engine.py  followup_engine.py  messaging.py  messaging_gateway.py
dev/active/: README.md
tests/: test_ai_message.py  test_engine.py  test_import_csv.py
